# PathTracingRenderer

./: CMakeLists.txt  Common.h  Renderer.cpp  Renderer.h  SDF.g4  main.cpp  scene.sdf  scene2.sdf  scene3.sdf
Assets/Scenes/: scene.sdf  scene3.sdf  scene4.sdf  scene5.sdf
Debug/: Instrumentor.h
Lights/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  PointLight.cpp  PointLight.h
Material/: Material.cpp  Material.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
Parser/: MySDFListener.cpp  MySDFListener.h  MySDFParser.cpp  MySDFParser.h  MySDFVisitor.cpp  MySDFVisitor.h  SDF.g4
Rays/: Hit.cpp  Hit.h  Ray.cpp  Ray.h
Renderable/: BaseRenderable.h  Common.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Scene/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  SceneDescription.cpp  SceneDescription.h
cmake/: ExternalAntlr4Cpp.cmake
